# StgSharp.VSS.dev

./: .gitignore  README.md  StgSharp.VSS.Dev.sln
StgSharp.Common/: StgSharp.Common.csproj
StgSharp.Common/HighPerformance/Memory/: L4.cs
StgSharp.Common/HighPerformance/ProcessorAbstraction/: M512.cs
StgSharp.Native/: CMakeLists.txt
StgSharp.Native/sn-head/: StgSharpNative.h  sn_intrinsic.context.x86.h  sn_intrinsic.std.h
StgSharp.Native/sn-src/: load_intrinsic.x86.c  m.solve.x86.c  mk.fma.x86.c  simdid.x86.c  sn_native.c  vector.c
StgSharp.UserInterface/: VSS_Arch.md
StgSharp.UserInterface/Service/: IService.cs
StgSharp.UserInterface/State/: IState.cs
StgSharp.UserInterface/View/: PresentorDescription.cs
